# api/swagger.json
@@ -1,90 +1,136 @@
 {
-    "openapi": "3.0.0",
-    "info": {
-      "title": "WorldClock API",
-      "description": "Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.",
-      "version": "1.0.0"
+  "openapi": "3.0.0",
+  "info": {
+    "title": "WorldClock API",
+    "description": "Optional multiline or single-line description in [CommonMark](http://commonmark.org/help/) or HTML.",
+    "version": "1.0.0"
+  },
+  "servers": [
+    {
+      "url": "http://localhost:8888/v1",
+      "description": "Main server"
+    }
+  ],
+  "tags": [
+    {
+      "name": "Cities",
+      "description": "All information necessary of the city"
+    }
+  ],
+  "paths": {
+    "/cities": {
+      "get": {
+        "summary": "Show the data of the cities table",
+        "description": "Will get all of the available cities in the server.",
+        "responses": {
+          "200": {
+            "description": "A JSON array of city items",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/cities"
+                  }
+                },
+                "examples": {
+                  "CitiesExample": {
+                    "$ref": "#/components/examples/citiesArrayExample"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "Cities"
+        ]
+      }
     },
-    "servers": [
-      {
-        "url": "http://localhost:8888/v1",
-        "description": "Main server"
-      }
-    ],
-    "tags": [
-      {
-        "name": "cities"
-      }
-    ],
-    "paths": {
-      "/cities": {
-        "get": {
-          "summary": "Returns the whole cities list",
-          "description": "Will get all of the available cities in the server.",
-          "responses": {
-            "200": {
-              "description": "A JSON array of city items",
-              "content": {
-                "application/json": {
-                  "schema": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/cities"
-                    }
-                  },
-                  "examples": {
-                    "CitiesExample": {
-                      "$ref": "#/components/examples/citiesArrayExample"
-                    }
+    "/cities/{id}": {
+      "get": {
+        "summary": "Find a city with id",
+        "description": "Returns the information of a single city",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id of the city to return",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Returns an object with the data of the city",
+            "content": {
+              "application/json": {
+                "examples": {
+                  "citiesIdExamples": {
+                    "$ref": "#/components/examples/citiesIdExample"
                   }
                 }
               }
             }
           },
-          "tags": [
-            "cities"
-          ]
+          "404": {
+            "description": "Id not found"
+          }
+        },
+        "tags": [
+          "Cities"
+        ]
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "cities": {
+        "type": "object",
+        "properties": {
+          "city_id": {
+            "type": "integer"
+          },
+          "city_name": {
+            "type": "string"
+          },
+          "continent": {
+            "type": "string"
+          }
         }
       }
     },
-    "components": {
-      "schemas": {
-        "cities": {
-          "type": "object",
-          "properties": {
-            "city_id": {
-              "type": "integer"
-            },
-            "city_name": {
-              "type": "string"
-            },
-            "continent": {
-              "type": "string"
-            }
+    "examples": {
+      "citiesArrayExample": {
+        "summary": "cities Array",
+        "value": [
+          {
+            "city_id": 1,
+            "city_name": "Mexico_City",
+            "continent": "America"
+          },
+          {
+            "city_id": 2,
+            "city_name": "Tokyo",
+            "continent": "Asia"
+          },
+          {
+            "city_id": 3,
+            "city_name": "Cairo",
+            "continent": "Africa"
           }
-        }
+        ]
       },
-      "examples": {
-        "citiesArrayExample": {
-          "summary": "cities Array",
-          "value": [
-            {
-              "city_id": 1,
-              "city_name": "Mexico_City",
-              "continent": "America"
-            },
-            {
-              "city_id": 2,
-              "city_name": "Tokyo",
-              "continent": "Asia"
-            },
-            {
-              "city_id": 3,
-              "city_name": "Cairo",
-              "continent": "Africa"
-            }
-          ]
+      "citiesIdExample": {
+        "summary": "city data",
+        "value": {
+          "city_id": 1,
+          "city_name": "Mexico_City",
+          "continent": "America"
         }
       }
     }
   }
+}
